General Format style

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <body>
 
         <header>
-            <nav class="nav_menu">
-                <h1>Roland Greifson</h1>
+            <nav class="nav_bar">
+                <h1 id="presentation_name">Roland Greifson</h1>
                 <ul class="options_menu">
                     <li>Libros</li>
                     <li>Poesía</li>
