Last edit from 04-05-22

--- a/index.html
+++ b/index.html
@@ -6,27 +6,30 @@
         <link rel="stylesheet" href="./style.css">
         <script src="./main.js"></script>
     </head>
-    
+
+<!--Considerar agregar un fondo de pantalla y/u otros objetos visuales agradables-->
     <body>
 
         <header>
             <nav class="nav_bar">
                 <h1 id="presentation_name">Roland Greifson</h1>
                 <ul class="options_menu">
-                    <li class="dropdown_li">Libros</li>
+                    <li class="dropdown_li">Libros
                         <ul class="collapse_list">
                             <li>Los caídos del Ragnarök</li>
                             <li>La mirada de la musa</li>
                             <li>El cantar de los hijos de la luz</li>
                         </ul>
-                    <li class="dropdown_li">Poesía</li>
+                    </li>
+                    <li class="dropdown_li">Poesía
                         <ul class="collapse_list">
                             <li>Amor</li>
                             <li>Odas</li>
                             <li>Reflexiones</li>
                             <li>Vida</li>
                      </ul>
-                    <li class="dropdown_li">Ensayos</li>
+                    </li>
+                    <li class="dropdown_li">Ensayos
                         <ul class="collapse_list">
                             <li>Tlön, Uqbar, Orbis Tertius</li>
                             <li>El etnógrafo</li>
@@ -34,7 +37,8 @@
                             <li>ensayo4</li>
                             <li>ensayo5</li>
                         </ul>
-                    <li class="dropdown_li">Traducciones</li>
+                    </li>
+                    <li class="dropdown_li">Traducciones
                         <ul class="collapse_list">
                             <li>Traducción1</li>
                             <li>Traducción2</li>
@@ -42,6 +46,7 @@
                             <li>Traducción4</li>
                             <li>Traducción5</li>
                         </ul>
+                    </li>
                 </ul>
             </nav>
         </header>
